force-app/main/default/objects/Delivery_Note_Line_Item__c/Delivery_Note_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Delivery Note Line Item</label>
    <nameField>
        <displayFormat>DNL-{0000}</displayFormat>
        <label>Delivery Note Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Note Line Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>