force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/Accept_QTY__c.field-meta.xml
<CustomField>
    <fullName>Accept_QTY__c</fullName>
    <label>Accept QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>