force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/Assessable_Value__c.field-meta.xml
<CustomField>
    <fullName>Assessable_Value__c</fullName>
    <label>Assessable Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>