force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/BIN_NO__c.field-meta.xml
<CustomField>
    <fullName>BIN_NO__c</fullName>
    <label>BIN NO.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>