force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/DISC_RATE__c.field-meta.xml
<CustomField>
    <fullName>DISC_RATE__c</fullName>
    <label>DISC. RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>