force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/FOLIO_NO__c.field-meta.xml
<CustomField>
    <fullName>FOLIO_NO__c</fullName>
    <label>FOLIO NO.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>