force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <formula>Taxable_Amount__c + CGST_Amount__c + IGST_Amount__c + SGST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>