force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <formula>Product_Part__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>