force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/Part_Serial__c.field-meta.xml
<CustomField>
    <fullName>Part_Serial__c</fullName>
    <label>Part Serial</label>
    <length>220</length>
    <type>Text</type>
</CustomField>