force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/Product_Part__c.field-meta.xml
<CustomField>
    <fullName>Product_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product/Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Delivery Note Line Items</relationshipLabel>
    <relationshipName>Delivery_Note_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>