force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/Sales_Order_Dispatch_Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Dispatch_Delivery_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Dispatch (Delivery Note)</label>
    <referenceTo>Sales_Order_Dispatch_Delivery_Note__c</referenceTo>
    <relationshipLabel>Delivery Note Line Items</relationshipLabel>
    <relationshipName>Delivery_Note_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>