force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Delivery Note Line Items</relationshipLabel>
    <relationshipName>Delivery_Note_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>