force-app/main/default/objects/Delivery_Note_Line_Item__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <label>Usage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>